traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:17: error: value ecritMessage is not a member of Unit
possible cause: maybe a semicolon is missing before `value ecritMessage'?
  } ecritMessage(i)
    ^