traversal.column.traversalbycolumn.TraversalByColumn.scala.code
def fin () : Boolean = {
  return getX() == 6 && getY() == 6
}



override def run() {
  var i = 0
  while (!fin()) {
    ecritMessage(i)
    i += 1
    if (getY == 6) {
      setPos (getX()+1,0)
    }
    else {
      setPos (getX(),getY()+1)
    }
  } ecritMessage(i)
}